--- a/config/values.yaml
+++ b/config/values.yaml
@@ -9,7 +9,7 @@ gcs:
   jsonKey: '<SERVICE_ACCOUNT_JSON>'
  
 # Name has to be unique in GCS.
-storageBucket: REPLACE_ME-spinnaker 
+storageBucket: REPLACE_ME-spinnaker-TIMESTAMP 
  
 # Configure your Docker registries here
 accounts:
